// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`package hides details 1`] = `
Array [
  "› 30m test-pkg owner",
  "
› 30m test-pkg owner
  test-description
",
  "› 30m test-pkg owner",
  "› 30m test-pkg owner",
]
`;

exports[`package hides details 2`] = `
Array [
  "› 30m test-pkg owner",
  "
› 30m test-pkg owner
  test-description
",
  "
› 30m test-pkg owner
  test-description
",
  "
› 30m test-pkg owner
  test-description
",
]
`;

exports[`package renders active depedency 1`] = `
Array [
  "› 30m test-pkg owner",
  "› 30m test-pkg owner",
]
`;

exports[`package renders active devDependency 1`] = `
Array [
  "› 30m test-pkg owner",
  "› 30m test-pkg owner",
]
`;

exports[`package renders active package 1`] = `
Array [
  "› 30m test-pkg owner",
  "› 30m test-pkg owner",
]
`;

exports[`package renders dependency 1`] = `
Array [
  "◉ 30m test-pkg owner",
  "◉ 30m test-pkg owner",
]
`;

exports[`package renders devDependency 1`] = `
Array [
  "◉ 30m test-pkg owner",
  "◉ 30m test-pkg owner",
]
`;

exports[`package renders package 1`] = `
Array [
  "  30m test-pkg owner",
  "  30m test-pkg owner",
]
`;

exports[`package shows details 1`] = `
Array [
  "› 30m test-pkg owner",
  "
› 30m test-pkg owner
  test-description
",
  "
› 30m test-pkg owner
  test-description
",
]
`;
